cmake_minimum_required(VERSION 2.8)
add_definitions("-Os -std=c++11 -stdlib=libc++ -DNDEBUG")
#add_definitions("-Os -std=c++11 -stdlib=libc++")

include_directories(
  ${CMAKE_CURRENT_LIST_DIR}/libs/include 
  ${CMAKE_CURRENT_LIST_DIR}/libs/include/voltdb 
  ${CMAKE_CURRENT_LIST_DIR}/libs/include/mysql 
  ${CMAKE_CURRENT_LIST_DIR}/src 
  ${CMAKE_CURRENT_LIST_DIR}/src/common 
  ${CMAKE_CURRENT_LIST_DIR}/src/lib 
  ${CMAKE_CURRENT_LIST_DIR}/src/app 
)

link_directories(
  ${CMAKE_CURRENT_LIST_DIR}/libs/lib
)

add_executable(
  realtime_server 
    src/app/event/receive_uiid.cc
  src/app/event/send_uiid.cc
  src/app/global.cc
  src/app/protobuf/event/pb_ev_res_uiid.cc
  src/app/protobuf/event/pb_ev_uiid.cc
  src/app/protobuf/event/pb_master.cc
  src/app/protobuf/message/uiid.pb.cc
  src/app/record/user.cc
  src/app/record/user_record_voltdb.cc
  src/app/redis/user_record_redis.cc
  src/app.cc
  src/app_session_delegate.cc
  src/cluster_builder.cc
  src/common/actor/actor_manager.cc
  src/common/actor/ws_actor.cc
  src/common/cluster/cluster.cc
  src/common/cluster/cluster_actor.cc
  src/common/cluster/cluster_node_delegate.cc
  src/common/cluster/router/round_robin_router.cc
  src/common/cluster/router/simple_random_router.cc
  src/common/common_object.cc
  src/common/db/redis/redis_service.cc
  src/common/db/voltdb/volt_command_invoker.cc
  src/common/db/voltdb/voltdb_connection.cc
  src/common/db/voltdb/voltdb_io_service.cc
  src/common/db/voltdb/voltdb_processor.cc
  src/common/error/error_handle_router.cc
  src/common/error/internal/error_handle_route_map.cc
  src/common/file/file_util.cc
  src/common/network/packet_data_helper.cc
  src/common/protobuf/internal/protobuf_route_map.cc
  src/common/protobuf/pb_command_dispatcher.cc
  src/common/protobuf/protobuf_router.cc
  src/common/scheduler/app_scheduler.cc
  src/common/scheduler/delayed_task_processor.cc
  src/common/system_actor/server_node.cc
  src/common/thread/bidirectional_communicator.cc
  src/common/user_actor/user_client.cc
  src/lib/archive/gzip.cc
  src/lib/base64/base64.cc
  src/lib/crypt/crypt.cc
  src/lib/exception/base_exception.cc
  src/lib/log/detail/log_detail.cc
  src/lib/log/detail/log_detail_android.cc
  src/lib/log/detail/log_detail_qt.cc
  src/lib/log/logger.cc
  src/lib/network/io/socket.cc
  src/lib/network/io/ssl_socket.cc
  src/lib/network/websocket/client/client_frame_data.cc
  src/lib/network/websocket/client/handshake_helper.cc
  src/lib/network/websocket/client/websocket.cc
  src/lib/network/websocket/client/websocket_async.cc
  src/lib/network/websocket/secret/secret_key.cc
  src/lib/network/websocket/server/handshake.cc
  src/lib/network/websocket/server/server_frame_data.cc
  src/lib/network/websocket/server/websocket_session.cc
  src/lib/random/random.cc
  src/lib/thread/multiple_task_dispatcher.cc
  src/lib/thread/task_dispatcher.cc
  src/lib/uri/uri.cc
  src/lib/variable/key_value_cache_storage.cc
  src/main.cc
  src/main_loop.cc
  src/node_server.cc
  src/node_session_delegate.cc
  src/server.cc
  src/setting_loader.cc
  src/app/event/receive_uiid.h
  src/app/event/send_uiid.h
  src/app/global.h
  src/app/protobuf/event/pb_ev_res_uiid.h
  src/app/protobuf/event/pb_ev_uiid.h
  src/app/protobuf/event/pb_master.h
  src/app/protobuf/message/uiid.pb.h
  src/app/record/user.h
  src/app/record/user_record_voltdb.h
  src/app/record/voltdb_record.h
  src/app/redis/user_record_redis.h
  src/app.h
  src/app_session_delegate.h
  src/cluster_builder.h
  src/common/actor/actor_manager.h
  src/common/actor/ws_actor.h
  src/common/cluster/cluster.h
  src/common/cluster/cluster_actor.h
  src/common/cluster/cluster_node_delegate.h
  src/common/cluster/cluster_node_info.h
  src/common/cluster/router/node_router.h
  src/common/cluster/router/round_robin_router.h
  src/common/cluster/router/simple_random_router.h
  src/common/common.h
  src/common/common_object.h
  src/common/db/redis/lib/config.h
  src/common/db/redis/lib/impl/redisclientimpl.h
  src/common/db/redis/lib/redisclient.h
  src/common/db/redis/lib/redisparser.h
  src/common/db/redis/lib/redisvalue.h
  src/common/db/redis/lib/version.h
  src/common/db/redis/redis_service.h
  src/common/db/voltdb/volt_command_invoker.h
  src/common/db/voltdb/voltdb.h
  src/common/db/voltdb/voltdb_connection.h
  src/common/db/voltdb/voltdb_io_service.h
  src/common/db/voltdb/voltdb_processor.h
  src/common/db/voltdb/voltdb_result.h
  src/common/error/error_handle_router.h
  src/common/error/internal/error_handle_route_map.h
  src/common/file/file_util.h
  src/common/network/packet_data_helper.h
  src/common/protobuf/internal/protobuf_route_map.h
  src/common/protobuf/pb_command_dispatcher.h
  src/common/protobuf/protobuf_router.h
  src/common/scheduler/app_scheduler.h
  src/common/scheduler/delayed_task.h
  src/common/scheduler/delayed_task_processor.h
  src/common/system_actor/server_node.h
  src/common/thread/bidirectional_communicator.h
  src/common/user_actor/user_client.h
  src/lib/archive/gzip.h
  src/lib/base64/base64.h
  src/lib/crypt/crypt.h
  src/lib/exception/base_exception.h
  src/lib/lib.h
  src/lib/log/detail/log_detail.h
  src/lib/log/logger.h
  src/lib/network/io/socket.h
  src/lib/network/io/socket_buffer.h
  src/lib/network/io/ssl_socket.h
  src/lib/network/websocket/client/client_frame_data.h
  src/lib/network/websocket/client/handshake.h
  src/lib/network/websocket/client/handshake_helper.h
  src/lib/network/websocket/client/websocket.h
  src/lib/network/websocket/client/websocket_async.h
  src/lib/network/websocket/client/websocket_delegate.h
  src/lib/network/websocket/packet.h
  src/lib/network/websocket/secret/secret_key.h
  src/lib/network/websocket/server/handshake.h
  src/lib/network/websocket/server/server_frame_data.h
  src/lib/network/websocket/server/session_delegate.h
  src/lib/network/websocket/server/websocket_session.h
  src/lib/network/websocket/socket_buffer.h
  src/lib/random/random.h
  src/lib/thread/multiple_task_dispatcher.h
  src/lib/thread/task_dispatcher.h
  src/lib/uri/uri.h
  src/lib/variable/key_value_cache_storage.h
  src/main_loop.h
  src/node_server.h
  src/node_session_delegate.h
  src/server.h
  src/setting.h
  src/setting_loader.h
  src/lib/atomic/atomic_operator.hpp
  src/lib/atomic/spin_lock.hpp
  src/lib/exception/websocket_exception.hpp
  src/lib/smart_ptr.hpp
)

target_link_libraries(
  realtime_server 
  ssl 
  crypto 
  protobuf-lite
  mysqlclient 
  voltdbcpp 
  event 
  event_pthreads 
  boost_filesystem-mt 
  boost_iostreams-mt 
  boost_system-mt 
  boost_regex-mt 
  boost_thread-mt 
  pthread
)

