cmake_minimum_required(VERSION 2.8)
add_definitions("-O0 -std=c++11 -stdlib=libc++ -g")
#add_definitions("-O3 -std=c++11 -stdlib=libc++ -DNDEBUG")

if (APPLE)
    add_definitions("-DTARGET_OS_MACOSX")
elseif (LINUX)
    add_definitions("-DTARGET_OS_LINUX")
endif ()

add_definitions("-DUSE_JEMALLOC")
add_definitions("-DSSL_TXT_TLSV1_2")
add_definitions("-D_REENTRANT")

include_directories(
  ${CMAKE_CURRENT_LIST_DIR}/libs/include 
  ${CMAKE_CURRENT_LIST_DIR}/libs/include/voltdb 
  ${CMAKE_CURRENT_LIST_DIR}/libs/include/mysql 
  ${CMAKE_CURRENT_LIST_DIR}/libs/include/jemalloc 
  ${CMAKE_CURRENT_LIST_DIR}/src 
  ${CMAKE_CURRENT_LIST_DIR}/src/external_src/flatbuffers 
  ${CMAKE_CURRENT_LIST_DIR}/src/external_src/redis 
  ${CMAKE_CURRENT_LIST_DIR}/src/external_src/redis/impl 
  ${CMAKE_CURRENT_LIST_DIR}/redis_impl 
  ${CMAKE_CURRENT_LIST_DIR}/src/common 
  ${CMAKE_CURRENT_LIST_DIR}/src/lib 
  ${CMAKE_CURRENT_LIST_DIR}/src/app 
)

link_directories(
  ${CMAKE_CURRENT_LIST_DIR}/libs/lib
)

add_executable(
  realtime_server 
  src/app/event/receive_uiid.cc
  src/app/event/send_uiid.cc
  src/app/flatbuffers/event/fb_event_res_uiid.cc
  src/app/flatbuffers/event/fb_event_uiid.cc
  src/app/flatbuffers/event/fb_master.cc
  src/app/flatbuffers/glue_fb.cc
  src/app/flatbuffers/glue_fb_glue.cc
  src/app/flatbuffers/register_glue_fb.cc
  src/app/global.cc
  src/app/protobuf/event/pb_ev_res_uiid.cc
  src/app/protobuf/event/pb_ev_uiid.cc
  src/app/protobuf/event/pb_master.cc
  src/app/protobuf/message/uiid.pb.cc
  src/app/record/user.cc
  src/app/record/user_record_voltdb.cc
  src/app/redis/user_record_redis.cc
  src/app/test_udp.cc
  src/app.cc
  src/app_session_delegate.cc
  src/cluster_builder.cc
  src/common/actor/actor_manager.cc
  src/common/actor/ws_actor.cc
  src/common/app_director.cc
  src/common/cluster/cluster.cc
  src/common/cluster/cluster_actor.cc
  src/common/cluster/cluster_node_delegate.cc
  src/common/cluster/router/round_robin_router.cc
  src/common/cluster/router/simple_random_router.cc
  src/common/common_object.cc
  src/common/db/redis/redis_service.cc
  src/common/db/voltdb/volt_command_invoker.cc
  src/common/db/voltdb/voltdb_connection.cc
  src/common/db/voltdb/voltdb_io_service.cc
  src/common/db/voltdb/voltdb_processor.cc
  src/common/error/error_handle_router.cc
  src/common/error/internal/error_handle_route_map.cc
  src/common/file/platform/file_stream_general.cc
  src/common/file/platform/file_stream_qt.cc
  src/common/file/platform/file_util_general.cc
  src/common/file/platform/file_util_qt.cc
  src/common/global_rand.cc
  src/common/router/command_dispatcher.cc
  src/common/router/internal/route_map.cc
  src/common/router/router.cc
  src/common/scheduler/app_scheduler.cc
  src/common/scheduler/delayed_task_processor.cc
  src/common/system_actor/server_node.cc
  src/common/thread/bidirectional_communicator.cc
  src/common/user_actor/user_client.cc
  src/lib/archive/gzip.cc
  src/lib/base64/base64.cc
  src/lib/crypt/crypt.cc
  src/lib/exception/base_exception.cc
  src/lib/log/detail/platform/log_detail.cc
  src/lib/log/detail/platform/log_detail_android.cc
  src/lib/log/detail/platform/log_detail_qt.cc
  src/lib/log/logger.cc
  src/lib/math/mat3.cc
  src/lib/math/mat4.cc
  src/lib/math/math_util.cc
  src/lib/math/quaternion.cc
  src/lib/math/vec2.cc
  src/lib/math/vec3.cc
  src/lib/math/vec4.cc
  src/lib/network/io/async_socket.cc
  src/lib/network/io/async_ssl_socket.cc
  src/lib/network/io/async_udp_socket.cc
  src/lib/network/io/socket.cc
  src/lib/network/io/ssl_socket.cc
  src/lib/random/random.cc
  src/lib/thread/multiple_task_dispatcher.cc
  src/lib/thread/task_dispatcher.cc
  src/lib/time/app_time.cc
  src/lib/time/time_formatter.cc
  src/lib/uri/uri.cc
  src/lib/variable/key_value_cache_storage.cc
  src/main.cc
  src/main_loop.cc
  src/network/ssl_mt.cc
  src/network/http/http_client.cc
  src/network/http/http_header_parser.cc
  src/network/http/https_client.cc
  src/network/websocket/client/client_frame_data.cc
  src/network/websocket/client/handshake_helper.cc
  src/network/websocket/client/websocket_async.cc
  src/network/websocket/client/ws_client_controller.cc
  src/network/websocket/client/ws_client_factory.cc
  src/network/websocket/secret/secret_key.cc
  src/network/websocket/server/handshake.cc
  src/network/websocket/server/server_frame_data.cc
  src/network/websocket/server/websocket_session.cc
  src/network/websocket/ws_packet_data_helper.cc
  src/node_server.cc
  src/node_session_delegate.cc
  src/server/tcp_server.cc
  src/server/udp_server.cc
  src/server.cc
  src/setting_loader.cc
  src/external_src/flatbuffers/idl_gen_text.cpp
  src/external_src/flatbuffers/idl_parser.cpp
  src/external_src/flatbuffers/reflection.cpp
  src/app/event/receive_uiid.h
  src/app/event/send_uiid.h
  src/app/flatbuffers/event/fb_event_res_uiid.h
  src/app/flatbuffers/event/fb_event_uiid.h
  src/app/flatbuffers/event/fb_master.h
  src/app/flatbuffers/glue_fb.h
  src/app/flatbuffers/glue_fb_glue.h
  src/app/flatbuffers/monster_generated.h
  src/app/flatbuffers/register_glue_fb.h
  src/app/flatbuffers/table/uiid_generated.h
  src/app/flatbuffers/test_generated.h
  src/app/global.h
  src/app/protobuf/event/pb_ev_res_uiid.h
  src/app/protobuf/event/pb_ev_uiid.h
  src/app/protobuf/event/pb_master.h
  src/app/protobuf/message/uiid.pb.h
  src/app/record/user.h
  src/app/record/user_record_voltdb.h
  src/app/record/voltdb_record.h
  src/app/redis/user_record_redis.h
  src/app/test_udp.h
  src/app.h
  src/app_session_delegate.h
  src/cluster_builder.h
  src/common/actor/actor_manager.h
  src/common/actor/ws_actor.h
  src/common/app_director.h
  src/common/cluster/cluster.h
  src/common/cluster/cluster_actor.h
  src/common/cluster/cluster_node_delegate.h
  src/common/cluster/cluster_node_info.h
  src/common/cluster/router/node_router.h
  src/common/cluster/router/round_robin_router.h
  src/common/cluster/router/simple_random_router.h
  src/common/common.h
  src/common/common_object.h
  src/common/data_buffer.h
  src/common/db/redis/redis_service.h
  src/common/db/voltdb/volt_command_invoker.h
  src/common/db/voltdb/voltdb.h
  src/common/db/voltdb/voltdb_connection.h
  src/common/db/voltdb/voltdb_io_service.h
  src/common/db/voltdb/voltdb_processor.h
  src/common/db/voltdb/voltdb_result.h
  src/common/error/error_handle_router.h
  src/common/error/internal/error_handle_route_map.h
  src/common/file/file_path.h
  src/common/file/file_stream.h
  src/common/file/file_util.h
  src/common/file/platform/apple/app_path_ios.h
  src/common/file/platform/apple/app_path_mac.h
  src/common/file/platform/file_stream_general.h
  src/common/file/platform/file_stream_qt.h
  src/common/global_rand.h
  src/common/router/command_dispatcher.h
  src/common/router/internal/route_map.h
  src/common/router/router.h
  src/common/scheduler/app_scheduler.h
  src/common/scheduler/delayed_task.h
  src/common/scheduler/delayed_task_processor.h
  src/common/system_actor/server_node.h
  src/common/thread/bidirectional_communicator.h
  src/common/thread/task_actor.h
  src/common/user_actor/user_client.h
  src/external_src/flatbuffers/flatbuffers/flatbuffers.h
  src/external_src/flatbuffers/flatbuffers/hash.h
  src/external_src/flatbuffers/flatbuffers/idl.h
  src/external_src/flatbuffers/flatbuffers/reflection.h
  src/external_src/flatbuffers/flatbuffers/reflection_generated.h
  src/external_src/flatbuffers/flatbuffers/util.h
  src/external_src/redis/config.h
  src/external_src/redis/redisclient.h
  src/external_src/redis/redisparser.h
  src/external_src/redis/redisvalue.h
  src/external_src/redis/version.h
  src/lib/archive/gzip.h
  src/lib/base64/base64.h
  src/lib/crypt/crypt.h
  src/lib/exception/base_exception.h
  src/lib/lib.h
  src/lib/log/detail/log_detail.h
  src/lib/log/logger.h
  src/lib/math/mat3.h
  src/lib/math/mat4.h
  src/lib/math/mat4_inl.h
  src/lib/math/math_util.h
  src/lib/math/quaternion.h
  src/lib/math/sse/matrix_sse.h
  src/lib/math/sse/matrix_sse_inl.h
  src/lib/math/vec2.h
  src/lib/math/vec3.h
  src/lib/math/vec4.h
  src/lib/network/io/async_socket.h
  src/lib/network/io/async_socket_inf.h
  src/lib/network/io/async_ssl_socket.h
  src/lib/network/io/async_udp_socket.h
  src/lib/network/io/socket.h
  src/lib/network/io/socket_buffer.h
  src/lib/network/io/socket_inf.h
  src/lib/network/io/ssl_socket.h
  src/lib/random/random.h
  src/lib/thread/multiple_task_dispatcher.h
  src/lib/thread/task_dispatcher.h
  src/lib/time/app_time.h
  src/lib/time/time_formatter.h
  src/lib/uri/uri.h
  src/lib/variable/key_value_cache_storage.h
  src/main_loop.h
  src/network/ssl_mt.h
  src/network/http/http_client.h
  src/network/http/http_header_parser.h
  src/network/http/http_request_params.h
  src/network/http/http_response_header.h
  src/network/http/http_status_code.h
  src/network/http/https_client.h
  src/network/websocket/client/client_frame_data.h
  src/network/websocket/client/handshake.h
  src/network/websocket/client/handshake_helper.h
  src/network/websocket/client/websocket_async.h
  src/network/websocket/client/websocket_delegate.h
  src/network/websocket/client/ws_client_controller.h
  src/network/websocket/client/ws_client_factory.h
  src/network/websocket/packet.h
  src/network/websocket/secret/secret_key.h
  src/network/websocket/server/handshake.h
  src/network/websocket/server/server_frame_data.h
  src/network/websocket/server/session_delegate.h
  src/network/websocket/server/websocket_session.h
  src/network/websocket/socket_buffer.h
  src/network/websocket/ws_packet_data_helper.h
  src/node_server.h
  src/node_session_delegate.h
  src/server/tcp_server.h
  src/server/udp_server.h
  src/server.h
  src/setting.h
  src/setting_loader.h
  src/lib/allocator/custom_allocator.hpp
  src/lib/allocator/stl_custom_allocator.hpp
  src/lib/atomic/atomic_operator.hpp
  src/lib/atomic/spin_lock.hpp
  src/lib/smart_ptr.hpp
  src/network/http/http_helper.hpp
  src/network/websocket/websocket_exception.hpp
  src/common/thread/task_actor.tmpl
)

target_link_libraries(
  realtime_server 
  ssl 
  crypto 
  protobuf-lite
  mysqlclient 
  voltdbcpp 
  jemalloc 
  event 
  event_pthreads 
  boost_date_time 
  boost_filesystem 
  boost_iostreams 
  boost_system 
  boost_regex 
  boost_thread 
  pthread
)

